# python-headscale-api

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  generate_schema.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml
headscale_api/: __init__.py  config.py  endpoints.py  headscale.py
headscale_api/schema/: config.py
headscale_api/schema/google/: api.py
headscale_api/schema/google/api/: __init__.py
headscale_api/schema/headscale/: v1.py
headscale_api/schema/headscale/v1/: __init__.py
tests/: __init__.py  config_test.py  dummy_test.py  endpoints_test.py
