[tool.poetry]
name = "headscale-api"
version = "0.1.0"
description = ""
authors = ["Marek Pikuła <marek@serenitycode.dev>"]
readme = "README.md"
packages = [{include = "headscale_api"}]

[tool.poetry.dependencies]
python = "^3.11"  # Change to 3.7 once datetime parsing is fixed.

[tool.poetry.group.lint.dependencies]
black = "^23.3.0"
mypy = "^1.1.1"
isort = "^5.11"
ruff = "^0.0.260"
pycodestyle = "^2.10.0"
pydocstyle = "^6.3.0"
pylint = "^2.13"
types-requests = "^2.28.11.17"

[tool.poetry.group.gen.dependencies]
betterproto = {extras = ["compiler"], version = "^1.2.5"}

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
coveralls = "^3.3.1"
pytest-cov = "^4.0.0"
pylint-pytest = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
