[tool.poetry]
name = "headscale-api"
version = "0.1.4"
description = "Python Headscale API and configuration abstraction."
authors = ["Marek Pikuła <marek@serenitycode.dev>"]
maintainers = ["Marek Pikuła <marek@serenitycode.dev>"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
repository = "https://github.com/MarekPikula/python-headscale-api"
# documentation = "https://python-headscale-api.readthedocs.io"
readme = "README.md"
packages = [
    {include = "headscale_api"},
]

[tool.poetry.dependencies]
python = "^3.11"  # TODO: Change to 3.7 once datetime parsing is fixed.
betterproto = {version = "2.0.0b5", extras = ["compiler"]} # TODO: Change after release.
requests = "^2.28.2"
pydantic = "^1.10.7"
pydantic-yaml = {extras = ["ruamel"], version = "^0.11.2"}

[tool.poetry.group.lint.dependencies]
black = "^23.3.0"
mypy = "^1.1.1"
isort = "^5.11"
ruff = "^0.0.260"
pydocstyle = "^6.3.0"
pylint = "^2.13"
types-requests = "^2.28.11.17"
pylint-pydantic = "^0.1.8"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
coveralls = "^3.3.1"
pyyaml = "^6.0"
pytest-cov = "^4.0.0"
pylint-pytest = "^1.1.2"

[tool.poetry.group.gen.dependencies]
datamodel-code-generator = "^0.17.2"

[tool.poetry.group.dev.dependencies]
# Add direct dependency only for development.
betterproto = {git = "https://github.com/danielgtaylor/python-betterproto.git", rev = "master", extras = ["compiler"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip_glob = ["headscale_api/schema"]

[tool.pydocstyle]
match_dir = '^(?:(headscale_api\/schema)|(\.)).*$'

[tool.pylint.main]
ignore-paths = ["headscale_api/schema"]

[tool.ruff]
exclude = ["headscale_api/schema"]

[tool.mypy]
exclude = ['^headscale_api\/schema\/.*$']
